SONAR-15244 Despite sonar.log.useJsonOutput is enabled some logs are still not in a JSON format